--- a/assets/html/hadith-playback-panel.html
+++ b/assets/html/hadith-playback-panel.html
@@ -2,9 +2,11 @@
         <div class="panel">
           <h3>Export</h3>
           <div class="transport">
-            <button id="previewPlayBtn" class="btn ghost">Load & Preview</button>
+            <button id="previewPlayBtn" class="btn ghost">
+              <i class="fas fa-play"></i> Load & Preview
+            </button>
             <button id="takePictureBtn" class="btn ghost" title="Capture and download individual images for each Hadith in your selected range">
-              Save Picture <span id="pictureSaveCount">(1)</span>
+              <i class="fas fa-camera"></i> Save Picture <span id="pictureSaveCount">(1)</span>
             </button>
           </div>
 
