--- a/assets/html/input-panel.html
+++ b/assets/html/input-panel.html
@@ -6,13 +6,16 @@
               <label class="small" for="surah">Surah</label>
               <select id="surah"></select>
             </div>
-            <div class="field field-ayah-start">
-              <label class="small" for="ayahStart">Start Ayah</label>
-              <select id="ayahStart"></select>
-            </div>
-            <div class="field field-ayah-end">
-              <label class="small" for="ayahEnd">End Ayah</label>
-              <select id="ayahEnd"></select>
+            <!-- Group Start/End Ayah side-by-side -->
+            <div class="ayah-row">
+              <div class="field field-ayah-start">
+                <label class="small" for="ayahStart">Start Ayah</label>
+                <select id="ayahStart"></select>
+              </div>
+              <div class="field field-ayah-end">
+                <label class="small" for="ayahEnd">End Ayah</label>
+                <select id="ayahEnd"></select>
+              </div>
             </div>
             <div class="field field-reciter">
               <label class="small" for="reciter">Reciter</label>
