--- a/assets/html/preview.html
+++ b/assets/html/preview.html
@@ -19,8 +19,12 @@
 
         <div class="preview-controls">
           <div class="preview-buttons">
-            <button id="previewPlayBtn" class="btn ghost">Load & Play</button>
-            <button id="previewStopBtn" class="btn ghost">Stop</button>
+            <button id="previewPlayBtn" class="btn btn-icon" title="Play">
+              <i class="fas fa-play"></i>
+            </button>
+            <button id="previewStopBtn" class="btn btn-icon" title="Stop">
+              <i class="fas fa-stop"></i>
+            </button>
           </div>
 
           <!-- ✅ ADD: Volume control row -->
