--- a/assets/html/playback-panel.html
+++ b/assets/html/playback-panel.html
@@ -1,19 +1,19 @@
         <!-- Panel: Playback & Export -->
         <div class="panel">
           <h3>Playback & Export</h3>
-          <div class="transport">
             <button id="buildPreviewBtn" class="btn ghost">
-              Play & Export
+              <i class="fas fa-play"></i> Play & Export
             </button>
             <!-- ✅ ADD: Dismiss button -->
-            <button id="dismissBtn" class="btn ghost" disabled>Dismiss</button>
+            <button id="dismissBtn" class="btn ghost" disabled>
+              <i class="fas fa-times"></i> Dismiss
+            </button>
             <button id="downloadBtn" class="btn ghost" disabled>
-              Download (WebM)
+              <i class="fas fa-download"></i> Download
             </button>
             <button id="takePictureBtn" class="btn ghost" title="Capture and download individual images for each ayah in your selected range">
-              Save Picture <span id="pictureSaveCount">(1)</span>
+              <i class="fas fa-camera"></i> Save Picture <span id="pictureSaveCount">(1)</span>
             </button>
-          </div>
 
           <div class="two-col-inline">
             <!-- <div class="status" id="status">Ready.</div> -->
