--- a/quran.html
+++ b/quran.html
@@ -369,19 +369,19 @@
       <nav class="mobile-nav">
 
         <button class="nav-btn active" data-target="input-panel-container">
-          <i class="fas fa-pen"></i> <span>Input</span>
+          <i class="fas fa-pen"></i>
         </button>
         <button class="nav-btn" data-target="background-panel-container">
-          <i class="fas fa-image"></i> <span>Bg</span>
+          <i class="fas fa-image"></i>
         </button>
         <button class="nav-btn" data-target="typography-panel-container">
-          <i class="fas fa-font"></i> <span>Text</span>
+          <i class="fas fa-font"></i>
         </button>
         <button class="nav-btn" data-target="credits-panel-container">
-          <i class="fas fa-copyright"></i> <span>Credit</span>
+          <i class="fas fa-copyright"></i>
         </button>
         <button class="nav-btn" data-target="playback-panel-container">
-          <i class="fas fa-play"></i> <span>Export</span>
+          <i class="fas fa-play"></i>
         </button>
       </nav>
 
