play and export buttons updated

--- a/assets/html/quran-playback-panel.html
+++ b/assets/html/quran-playback-panel.html
@@ -2,18 +2,18 @@
         <div class="panel">
           <h3>Playback & Export</h3>
           <div class="transport">
-            <button id="buildPreviewBtn" class="btn ghost">
+            <button id="buildPreviewBtn" class="btn">
               <i class="fas fa-play"></i> Play & Export
             </button>
-            <button id="multiExportBtn" class="btn ghost" title="Export separate videos for each Ayah in the range">
+            <button id="multiExportBtn" class="btn" title="Export separate videos for each Ayah in the range">
               <i class="fas fa-layer-group"></i> Play & Multi Single Export <span id="multiExportCount">(1)</span>
             </button>
             <!-- ✅ ADD: Dismiss button -->
-            <button id="dismissBtn" class="btn ghost" disabled><i class="fas fa-times"></i> Dismiss</button>
-            <button id="downloadBtn" class="btn ghost" disabled>
+            <button id="dismissBtn" class="btn" disabled><i class="fas fa-times"></i> Dismiss</button>
+            <button id="downloadBtn" class="btn" disabled>
               <i class="fas fa-download"></i> Download (WebM)
             </button>
-            <button id="takePictureBtn" class="btn ghost" title="Capture and download individual images for each ayah in your selected range">
+            <button id="takePictureBtn" class="btn" title="Capture and download individual images for each ayah in your selected range">
               <i class="fas fa-camera"></i> Save Picture <span id="pictureSaveCount">(1)</span>
             </button>
             
