main message is under " "

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </header>
         
-        <p class="landing-message">Spread the message of Islam in short videos and images</p>
+        <p class="landing-message">"Spread the message of Islam in short videos and images"</p>
         
         <div class="how-to-use">
             <a href="https://youtu.be/ZcmFbd3Dn4k" target="_blank" class="tutorial-link">
