some element size changed

--- a/assets/html/typography-panel.html
+++ b/assets/html/typography-panel.html
@@ -3,7 +3,7 @@
   <h3>Typography</h3>
   <div
     class="typography-flex"
-    style="display: flex; flex-direction: column; gap: 12px"
+    style="display: flex; flex-direction: column; gap: 5px"
   >
     <!-- Row 1: Translation Controls -->
     <div
@@ -11,7 +11,7 @@
       style="
         display: flex;
         width: 100%;
-        gap: 12px;
+        gap: 5px;
         align-items: flex-end;
         flex-wrap: wrap;
       "
@@ -171,7 +171,7 @@
       <label
         class="toggle"
         title="Show Arabic Text"
-        style="margin-top: 0; min-width: fit-content; height: 38px"
+        style="margin-top: 0; min-width: fit-content;"
       >
         <input type="checkbox" id="showArabicText" checked />
         <span>Show Arabic Text</span>
@@ -184,7 +184,7 @@
       style="
         display: flex;
         width: 100%;
-        gap: 12px;
+        gap: 5px;
         align-items: flex-end;
         flex-wrap: wrap;
         margin-top: 8px;
