while playing everything will be frize while playing and audio have fade in and out

--- a/assets/html/quran-preview.html
+++ b/assets/html/quran-preview.html
@@ -63,5 +63,11 @@
           preload="metadata"
           style="display: none"
         ></audio>
+        <audio
+          id="audioPlayer2"
+          controls
+          preload="metadata"
+          style="display: none"
+        ></audio>
 
 
